--- a/Comet.Client/Comet.Client.csproj
+++ b/Comet.Client/Comet.Client.csproj
@@ -30,6 +30,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Management" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
