证书自动生成的

--- a/Comet.Server/Comet.Server.csproj
+++ b/Comet.Server/Comet.Server.csproj
@@ -29,6 +29,14 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Images\Comet.p12" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Comet.p12">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.Configuration" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
