--- a/Comet.Server/Comet.Server.csproj
+++ b/Comet.Server/Comet.Server.csproj
@@ -320,6 +320,8 @@
       <Version>5.6.0</Version>
     </PackageReference>
     <PackageReference Include="Open.Nat" Version="2.1.0" />
+    <PackageReference Include="OpenCvSharp4" Version="4.11.0.20250507" />
+    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.11.0.20250507" />
     <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="protobuf-net">
       <Version>2.4.8</Version>
