using System.Data.SQLite.dll

--- a/Comet.Client/ILRepack.targets
+++ b/Comet.Client/ILRepack.targets
@@ -11,6 +11,7 @@
 	  <InputAssemblies Include="$(TargetDir)System.Memory.dll"/>
 	  <InputAssemblies Include="$(TargetDir)System.Numerics.Vectors.dll"/>
 	  <InputAssemblies Include="$(TargetDir)System.Runtime.CompilerServices.Unsafe.dll"/>
+	  <InputAssemblies Include="$(TargetDir)System.Data.SQLite.dll"/>
   </ItemGroup>
 
   <ILRepack
