--- a/Comet.Client/Comet.Client.csproj
+++ b/Comet.Client/Comet.Client.csproj
@@ -34,7 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NAudio">
-      <HintPath>..\NAudio.dll</HintPath>
+      <HintPath>..\dll\NAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Data.SQLite">
+      <HintPath>..\dll\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Management" />
