--- a/Comet.Common/Comet.Common.csproj
+++ b/Comet.Common/Comet.Common.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="NAudio">
-      <HintPath>..\NAudio.dll</HintPath>
+      <HintPath>..\dll\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceModel" />
