--- a/Comet.Server/Comet.Server.csproj
+++ b/Comet.Server/Comet.Server.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="NAudio">
-      <HintPath>..\NAudio.dll</HintPath>
+      <HintPath>..\dll\NAudio.dll</HintPath>
     </Reference>
     <Reference Include="System.Configuration" />
     <Reference Include="System.ServiceModel" />
